№6 Ф6 добавить HistoryList, удаление дубликатов. Тесты на них + выровнены строки